:art: :bug: Fixes the alignment of the similar games and dlc section

--- a/frontend/src/modules/game/components/dlc/styles.css
+++ b/frontend/src/modules/game/components/dlc/styles.css
@@ -75,4 +75,6 @@
       height: 128px;
     }
   }
-  
+  .dlc-holder{
+    margin:0 -0.5rem;
+  }
